[gd_scene load_steps=16 format=3 uid="uid://8qf5rqnmca7i"]

[ext_resource type="Script" uid="uid://k853c1p2y7ul" path="res://scenes/world.gd" id="1_nnsk1"]
[ext_resource type="Texture2D" uid="uid://dibjp3a4ioid1" path="res://icon.svg" id="2_rwgxs"]
[ext_resource type="Texture2D" uid="uid://btkjybafm0d5u" path="res://IMG/WhatsApp Image 2025-06-25 at 16.30.55.jpeg" id="3_4wyf3"]

[sub_resource type="LabelSettings" id="LabelSettings_4wyf3"]
font_size = 30

[sub_resource type="AtlasTexture" id="AtlasTexture_k0juu"]
atlas = ExtResource("3_4wyf3")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_71j4m"]
atlas = ExtResource("3_4wyf3")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfnet"]
atlas = ExtResource("3_4wyf3")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7141"]
atlas = ExtResource("3_4wyf3")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4mrxx"]
atlas = ExtResource("3_4wyf3")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7r4gi"]
atlas = ExtResource("3_4wyf3")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w7kh3"]
atlas = ExtResource("3_4wyf3")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3hyu"]
atlas = ExtResource("3_4wyf3")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5onr"]
atlas = ExtResource("3_4wyf3")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhx03"]
atlas = ExtResource("3_4wyf3")
region = Rect2(64, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_o8fc1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k0juu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_71j4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfnet")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7141")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4mrxx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7r4gi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w7kh3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3hyu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5onr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhx03")
}],
"loop": true,
"name": &"ampulheta",
"speed": 3.0
}]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_nnsk1")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="TurnoLabel" type="Label" parent="UI"]
offset_left = 142.0
offset_top = 561.0
offset_right = 549.0
offset_bottom = 605.0
text = "Pr√≥ximo turno em: 04:00"
label_settings = SubResource("LabelSettings_4wyf3")
uppercase = true

[node name="IniciarTurnoButton" type="Button" parent="UI"]
offset_left = 364.0
offset_top = 260.0
offset_right = 782.0
offset_bottom = 396.0
icon = ExtResource("2_rwgxs")

[node name="Ampulheta" type="AnimatedSprite2D" parent="UI"]
position = Vector2(69.75, 579.25)
scale = Vector2(8.53125, 8.53125)
sprite_frames = SubResource("SpriteFrames_o8fc1")
animation = &"ampulheta"
frame_progress = 0.482919

[connection signal="pressed" from="UI/IniciarTurnoButton" to="." method="_on_iniciar_turno_button_pressed"]
